applications/bitwarden/statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: bitwarden
  labels:
    app: bitwarden
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: bitwarden
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bitwarden
spec:
  selector:
    matchLabels:
      app: bitwarden # has to match .spec.template.metadata.labels
  serviceName: "bitwarden"
  replicas: 1 # by default is 1
  minReadySeconds: 10 # by default is 0
  template:
    metadata:
      labels:
        app: bitwarden # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: bitwarden
        image: vaultwarden/server
        ports:
        - containerPort: 8080
          name: http
        resources:
          requests:
            cpu: "100m"
            memory: "100Mi"
            ephemeral-storage: 2Gi
          limits:
            cpu: "1"
            memory: "1Gi"
            ephemeral-storage: 2Gi
        volumeMounts:
        - name: data
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
