applications/bitwarden/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bitwarden
  annotations:
spec:
  tls:
  - hosts:
      - bitwarden.jlh.name
    secretName: bitwarden-jlh-name-tls
  rules:
  - host: bitwarden.jlh.name
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bitwarden
            port:
              number: 8080
